2003-12-07 Al Riddoch <alriddoch@zepler.org>
	* src/services/ServiceTest.cpp: Fix conversion glitch so that
	  this test compiles.

2003-11-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/components/ogre: added AvatarKeyboardListener.(h|cpp)
	and restored local avatar movement.

2003-11-26 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/components/ogre: added Avatar.(h|cpp) to store
	the whole scenenode tree for the avatar and to control
	its movement, looks, etc.

2003-11-25 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/components/ogre: added 3rd person camera and
	(now working) top view camera. Added another camera
	("spycam") for debugging purposes.

2003-11-18 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/services/server/ServerService.cpp: myWorld is
	not created by this service anymore, instead is 
	retrieved from myAvatar after taking/creating char.
	Modified touch op so we can touch any entity.
	* src/components/ogre/*: overall improvement. 
	Added EntityListener.(h|cpp) to listen to and act 
	upon Eris entity-related signals.

2003-11-12 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/components/ogre: added PlayerMouseListener,
	which brings back mouselook. 
	Makefile.am: modified to include PlayerMouseListener.
	DimeOgre.cpp: instantiates and configures 
	PlayerMouseListener.

2003-11-04 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/components/ogre:
	MediaDeployer.(h|cpp): added methods for adding media.
	DimeOgre.cpp: some cleanup.

2003-11-04 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* README: cleanup of media files, moved to purple.
	* src/components/ogre/MediaDeployer.(h|cpp):
	added class to deploy media on demand.
	* src/components/text: Makefile.am, EmberText.(h|cpp):
	added text component, MUD-like, for the sake of having
	another working application using the framework.

2003-10-30 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/services/components/ogre: